force-app/main/default/objects/Assessment.object
<CustomObject>
    <fields>
        <fullName>API_AssessmentDate__c</fullName>
        <formula>If(NOT(ISBLANK( EffectiveDateTime )),

TEXT(YEAR(DATEVALUE( EffectiveDateTime )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(EffectiveDateTime))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(EffectiveDateTime))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <label>API_AssessmentDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AssessmentLevel__c</fullName>
        <formula>TEXT( AssessmentLevel__c )</formula>
        <label>API_AssessmentLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AssessmentLocation__c</fullName>
        <formula>Assessment_Location__c</formula>
        <label>API_AssessmentLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AssessmentType__c</fullName>
        <formula>TEXT(Type)</formula>
        <label>API_AssessmentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PrioritizationStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT( PrioritizationStatus__c ),FIND(&quot;:&quot;, TEXT( PrioritizationStatus__c ))-1))</formula>
        <label>API_PrioritizationStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentLevel__c</fullName>
        <label>Assessment Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Crisis Needs Assessment</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Housing Needs Assessment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Location__c</fullName>
        <label>Assessment Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( LastModifiedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDAssessmentStage__c</fullName>
        <label>HUD Assessment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrioritizationStatus__c</fullName>
        <label>Prioritization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisPrioritizationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>HMIS_Assessment</fullName>
        <active>true</active>
        <label>HMIS Assessment</label>
    </recordTypes>
</CustomObject>